<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlayerFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAddPlayer"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_player"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textLeague"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/textAddPlayer"
        app:layout_constraintStart_toStartOf="@id/textAddPlayer"
        app:layout_constraintEnd_toEndOf="@id/textAddPlayer"
        android:text="@string/team_league"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textDivision"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/textLeague"
        app:layout_constraintStart_toStartOf="@id/textAddPlayer"
        app:layout_constraintEnd_toEndOf="@id/textAddPlayer"
        android:text="@string/division_team_play_in"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/textDivision"
        app:layout_constraintStart_toStartOf="@id/textAddPlayer"
        app:layout_constraintEnd_toEndOf="@id/textAddPlayer"
        android:text="@string/teamName"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editNewPlayer"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/textTeam"
        android:layout_marginStart="@dimen/margin_end"
        app:layout_constraintStart_toStartOf="@id/textAddPlayer"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintEnd_toEndOf="@id/textAddPlayer"
        android:hint="@string/add_new_player"
        android:inputType="text"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editNewPlayerHandicap"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/editNewPlayer"
        app:layout_constraintStart_toStartOf="@id/textAddPlayer"
        app:layout_constraintEnd_toEndOf="@id/textAddPlayer"
        android:hint="@string/enter_player_handicap"
        android:inputType="numberSigned"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@id/editNewPlayerHandicap"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toStartOf="@id/textAddPlayer"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        android:text="@string/save"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        app:layout_constraintTop_toTopOf="@id/buttonSave"
        app:layout_constraintBottom_toBottomOf="@id/buttonSave"
        app:layout_constraintStart_toEndOf="@id/buttonSave"
        app:layout_constraintEnd_toEndOf="@id/textAddPlayer"
        android:text="@string/cancel"/>


</androidx.constraintlayout.widget.ConstraintLayout>
