<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/colorGreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/textRegistration"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginRight="@dimen/margin_end"
        android:layout_marginEnd="@dimen/margin_end"

        android:text="@string/register"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/editFirstName"

        app:layout_constraintTop_toBottomOf="@id/textRegistration"
        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"

        android:layout_marginTop="@dimen/margin_top"

        android:hint="@string/first_name"
        android:inputType="text"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/editSurname"

        app:layout_constraintTop_toBottomOf="@id/editFirstName"
        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"

        android:layout_marginTop="@dimen/margin_top"

        android:hint="@string/surname"
        android:inputType="text"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/editEmail"

        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"
        app:layout_constraintTop_toBottomOf="@id/editSurname"

        android:layout_marginTop="@dimen/margin_top"

        android:inputType="textEmailAddress"
        android:hint="@string/email_address"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/editPassword"

        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"

        android:layout_marginTop="@dimen/margin_top"

        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/editRepeatPassword"

        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"

        android:layout_marginTop="@dimen/margin_top"

        android:inputType="textPassword"
        android:hint="@string/password2"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/buttonRegister"

        app:layout_constraintTop_toBottomOf="@id/editRepeatPassword"
        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"

        android:layout_marginTop="@dimen/margin_top"

        android:text="@string/register"
        android:textAlignment="center"
        android:onClick="register"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/buttonCancel"

        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="@id/textRegistration"
        app:layout_constraintEnd_toEndOf="@id/textRegistration"

        android:layout_marginTop="@dimen/margin_top"

        android:text="@string/cancel"
        android:textAlignment="center"

        android:onClick="cancel"/>


</androidx.constraintlayout.widget.ConstraintLayout>