<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FixtureResultsActivity"
    android:background="@color/colorGreen">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinChooseLeague"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_end"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinChooseDivision"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinChooseLeague"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editMatchDate"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinChooseDivision"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        android:hint="@string/enter_match_date"
        android:inputType="date"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGetTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/editMatchDate"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:text="@string/get_possible_teams"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textHomeTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/buttonGetTeam"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:background="@color/colorBeige"
        android:textAlignment="center"
        android:text="@string/home_team"
        />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinHomeTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/textHomeTeam"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textAwayTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinHomeTeam"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        android:text="@string/away_team"
        />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinAwayTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/textAwayTeam"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        android:visibility="invisible"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddAsFixture"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinAwayTeam"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        android:text="@string/add_as_fixture"
        android:visibility="invisible"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEnterResults"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/buttonAddAsFixture"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@color/colorBeige"
        android:text="@string/enter_result"
        android:visibility="invisible"
        />





</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>