<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeritActivity"
    android:background="@color/colorGreen">

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinChooseLeague"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_end"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:background="@drawable/rounded"
        android:padding="@dimen/padding"
        />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinChooseSeason"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinChooseLeague"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@drawable/rounded"
        android:padding="@dimen/padding"
        android:visibility="invisible"
        />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinChooseTeam"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinChooseSeason"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:background="@drawable/rounded"
        android:padding="@dimen/padding"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textPlayerName"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/spinChooseTeam"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toStartOf="@+id/textPlayerHcap"
        android:textAlignment="viewStart"
        android:text="@string/player_name"
        app:layout_constraintHorizontal_weight="3"
        android:background="@color/colorBeige"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textPlayerHcap"
        app:layout_constraintTop_toTopOf="@id/textPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/textPlayerName"
        app:layout_constraintStart_toEndOf="@id/textPlayerName"
        app:layout_constraintEnd_toStartOf="@+id/textGamesPlayed"
        android:textAlignment="viewEnd"
        android:text="@string/hcap"
        android:background="@color/colorBeige"
        app:layout_constraintHorizontal_weight="1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textGamesPlayed"
        app:layout_constraintTop_toTopOf="@id/textPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/textPlayerName"
        app:layout_constraintStart_toEndOf="@id/textPlayerHcap"
        app:layout_constraintEnd_toStartOf="@+id/textGamesWon"
        android:textAlignment="viewEnd"
        android:text="@string/p"
        android:background="@color/colorBeige"
        app:layout_constraintHorizontal_weight="1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textGamesWon"
        app:layout_constraintTop_toTopOf="@id/textPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/textPlayerName"
        app:layout_constraintStart_toEndOf="@id/textGamesPlayed"
        app:layout_constraintEnd_toStartOf="@+id/textGamesLost"
        android:textAlignment="viewEnd"
        android:text="@string/w"
        android:background="@color/colorBeige"
        app:layout_constraintHorizontal_weight="1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textGamesLost"
        app:layout_constraintTop_toTopOf="@id/textPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/textPlayerName"
        app:layout_constraintStart_toEndOf="@id/textGamesWon"
        app:layout_constraintEnd_toStartOf="@+id/textPercentWon"
        android:textAlignment="viewEnd"
        android:text="@string/l"
        android:background="@color/colorBeige"
        app:layout_constraintHorizontal_weight="1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textPercentWon"
        app:layout_constraintTop_toTopOf="@id/textPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/textPlayerName"
        app:layout_constraintStart_toEndOf="@id/textGamesLost"
        app:layout_constraintEnd_toEndOf="@+id/spinChooseLeague"
        android:paddingEnd="@dimen/padding"
        android:textAlignment="viewEnd"
        android:text="@string/won"
        android:background="@color/colorBeige"
        app:layout_constraintHorizontal_weight="2"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerViewMerit"
        app:layout_constraintTop_toBottomOf="@id/textPlayerName"
        app:layout_constraintStart_toStartOf="@id/spinChooseLeague"
        app:layout_constraintEnd_toEndOf="@id/spinChooseLeague"
        android:textAlignment="center"
        android:paddingTop="1dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>